# MiraclePlayer

./: .gitignore  CMakeLists.txt  RCa11100  README.md  albumitem.cpp  albumitem.h  albumitem.ui  albumview.cpp  albumview.h  albumview.ui  app_win32.rc  favview.cpp  favview.h  favview.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  metadatahelper.h  musicdata.h  musicitem.cpp  musicitem.h  musicitem.ui  musiclist.cpp  musiclist.h  musiclist.ui  player-assets.qrc  playercontrol.cpp  playercontrol.h  playercontrol.ui  playerhelper.h  playsoundhelper.cpp  playsoundhelper.h  searchform.cpp  searchform.h  searchform.ui  settings.cpp  settings.h  settings.ui  sidebaritem.cpp  sidebaritem.h  (+1 more)
mplayer/: Reference.txt
setup/: License.rtf  README.md  miracleplayer.iss  miracleplayer.nsi  miracleplayer.wixproj  miracleplayer.wxs
